<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <!--<TextView
        android:text="@string/special_interest_groups_sigs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="#000000"
        android:layout_marginTop="17dp"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        tools:layout_centerHorizontal="true"
        android:textAlignment="center"/>
    <TextView
        android:text="@string/info_sig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">
        <!--android:layout_below="@+id/textView3">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/special_interest_groups_sigs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textColor="#000000"
                android:layout_marginTop="17dp"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                tools:layout_centerHorizontal="true"
                android:textAlignment="center"/>
            <TextView
                android:text="@string/info_sig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/hacking"
                android:id="@+id/button_hacking"
                android:contentDescription="@string/competitive_programming"
                android:elevation="20dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:background="#ffffff"
                android:paddingTop="5dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/webdevelop2"
                android:id="@+id/button_webdev"
                android:contentDescription="@string/web_developement"
                android:elevation="20dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:layout_marginBottom="10dp" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/competitive"
                android:contentDescription="@string/ethical_hacking"
                android:id="@+id/button_cc"
                android:paddingTop="-20dp"
                android:elevation="20dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:background="#ffffff"
                android:layout_marginBottom="10dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>