<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/gradientfinal">

    <TextView
        android:text="@string/seminar1_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textAlignment="gravity"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/priteshmaker2"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:id="@+id/imageView9"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:text="@string/seminar1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView9"
        android:id="@+id/textView9"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView8"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:text="lol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_toRightOf="@+id/imageView9"
        android:id="@+id/textView10"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9"
        android:layout_alignBottom="@+id/imageView9"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:text="@string/seminar1_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView9"
        android:id="@+id/textView11"
        android:layout_alignParentBottom="true"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/imageView9"
        android:layout_alignStart="@+id/imageView9" />

    <ImageButton
        app:srcCompat="@drawable/forward"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/button_forward"
        android:background="@android:color/transparent"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:padding="5dp" />
</RelativeLayout>