<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/gradientfinal">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/seminar32_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:id="@+id/textView8"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/dr_craig_stewart"
                android:layout_below="@+id/textView8"
                android:layout_centerHorizontal="true"
                android:id="@+id/imageView10" />

            <TextView
                android:text="@string/seminar32_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="true"
                android:id="@+id/textView13"
                android:layout_below="@+id/imageView10"
                android:textAlignment="gravity"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginTop="5dp" />

            <ImageButton
                app:srcCompat="@drawable/back"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:id="@+id/button_back"
                android:background="@android:color/transparent"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="15dp"
                android:layout_alignTop="@+id/textView13" />

            <ImageButton
                app:srcCompat="@drawable/forward"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/button_forward"
                android:background="@android:color/transparent"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="15dp"
                android:layout_alignTop="@+id/textView13" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView13">
            <TextView
                android:text="@string/seminar32_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/textView14"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="17dp"
                android:textColor="#000000"
                android:textSize="16sp" />
            </ScrollView>
        </RelativeLayout>





</RelativeLayout>